samples/_failures_safe/1761170986_075471_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_847141fa.c: In function ‘main’:
./samples/SAFE/__tmp_847141fa.c:197:37: error: expected ‘;’ at end of input
  197 |             state_machine_transition
      |                                     ^
      |                                     ;
./samples/SAFE/__tmp_847141fa.c:197:13: error: expected declaration or statement at end of input
  197 |             state_machine_transition
      |             ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_847141fa.c:197:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_847141fa.c:197:13: error: expected declaration or statement at end of input
